--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -10,21 +10,35 @@
 
     .left{
         flex: 1;
-        overflow: hidden;
-        img{
-            height: 100%;  
+        width: 50%;
+
+        @include mobile{
+            width: 100%;
+        }
+
+        .player{
+            
+            @include mobile {
+
+                width: 60%;
+            }
         }
     }
 
     .right{
-        flex: 1;
+        width: 60%;
+        flex: 2 1;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
 
+        @include mobile{
+            width: 100%;
+        }
+
         h2{
-            font-size: 30px;
+            font-size: 45px;
         }
 
         form{
@@ -36,31 +50,36 @@
             justify-content: space-around;
 
             input{
-                 width: 300px;
+                 width: 90%;
                  height: 30px;
                  font-size: 14px;
+                 margin-bottom: 10px;
             }
 
             textarea{
-                width: 300px;
+                width: 90%;
                 height: 200px;
                 font-size: 14px;
             }
 
             button{
+                display: block;
+                width: 60%;
                 margin-top: 10px;
-                width: 150px;
-                height: 30px;
+                height: 35px;
                 color: white;
                 background-color: $mainColor;
                 border: none;
                 border-radius: 10px;
                 font-weight: 500;
                 cursor: pointer;
+                font-size: 20px;
 
-                &:focus{
-                    outline: none;
+
+                &:hover{
+                    background-color: lighten($color: $mainColor, $amount: 10);
                 }
+                
             }
         }
     }
