--- a/src/components/github/githubScreen.scss
+++ b/src/components/github/githubScreen.scss
@@ -14,6 +14,10 @@
         justify-content: center;
     }
 
+    @include mobile{
+        margin-top: 60px;
+    }
+
     .icon{
         font-size: 45px;
         color: $mainColor;
@@ -22,14 +26,18 @@
 
 
 .card{
-    width: 54%;
+    width: 20%;
     margin: auto;
-    margin-top: 40px;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     border: 1px solid #cccc;
     border-radius: 10px;
+
+    @include mobile{
+        width: 65%;
+    }
 
     .card-img{
         display: block;
@@ -48,8 +56,8 @@
         
         padding: 10px;
 
-        p{
-            margin-top: 20px;    
+        p{    
+            font-size: 19px;
         }
 
         a{
@@ -57,6 +65,8 @@
             color: black;
             cursor: pointer;
             transition: all 500ms ease;
+            font-size: 17px;
+            padding: 15px;
 
             &:hover{
                 text-decoration: underline;
