--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -15,6 +15,18 @@
 
     .skills{
         width: 50%;
+        cursor: pointer;
+        transition: all .3s ease;
+
+        .skill{
+            margin: 10px;
+            
+            &:hover{
+                border: 1px solid gray;
+                border-radius: 10px;
+                padding: 2px;
+            }
+        }
 
         #html{
             max-width: 450px;
@@ -69,6 +81,12 @@
     color: white;
     text-transform: uppercase;
     margin: 20px;
+
+    span{
+        font-size: 15px;
+        font-weight: 200;
+        margin-left: 10px;
+    }
 }
 
 
