--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -13,7 +13,20 @@
     align-items: center;
     justify-content: center;
     transition: all 1s ease;
+    display: flex;
+    flex-direction: column;
 
+    .menuIconWrap{
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        margin-bottom: 20px;
+
+        .menuIcon{
+            font-size: 28px;
+            color: #fff;
+        }
+    }
 
     &.active{
         right: 0;
@@ -29,7 +42,7 @@
         width: 70%;
 
         li{
-            margin-bottom: 20px;
+            margin-bottom: 10px;
 
             a{
                font-size: inherit;
